# university-haskell

projects/: projects.cabal
projects/.stack-work/: stack.sqlite3
projects/.stack-work/ghci/aafb701a/: cabal_macros.h
projects/src/lab_first/: folds.hs  trees.hs
