name:                projects
version:             0.1.0.0
-- synopsis:
-- description:
cabal-version:       >=1.10
-- extra-source-files:  README.md

executable projects
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
